Inventory/k8s/7_app_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: msusers-ns
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate 
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 5    
  template:
    metadata:
      name: inventory
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: alex197612/inventorysaga:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9105
          name: inventory
          protocol: TCP
        - containerPort: 9009
          name: metrics
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
#        livenessProbe:
#          httpGet:
#            path: "/actuator/health/liveness"
#            port: "metrics"
#          initialDelaySeconds: 600
#          failureThreshold: 3
#          periodSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: "/actuator/health/readiness"
#            port: "metrics"
#          initialDelaySeconds: 600
#          failureThreshold: 3
#          periodSeconds: 10
#        lifecycle:
#          preStop:
#            exec:
#              command: ["sh", "-c", "sleep 10"]
        volumeMounts:
        - name: inventory-config
          mountPath: "/opt/config"
        command: ["java", "-jar", "/app.jar", "--spring.config.location=/opt/config/application.properties", "--spring.profiles.active=postgres"]  
      volumes:
      - name: inventory-config
        configMap:
          name: inventory-config
