Inventory/k8s/9_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: msusers-ns
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /inventory/
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
